@@ -1,5 +1,7 @@
 {
-  "itemGroup.neostorage": "Example Mod Tab",
   "block.neostorage.example_block": "Example Block",
-  "item.neostorage.example_item": "Example Item"
+  
+  "item.neostorage.neotool": "NeoTool item",
+  
+  "itemGroup.neostorage.neostorage": "Neo Storage items"
 }
